--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name" : "vpg/slingshot",
     "description" : "ES Migration tool based on Scann/Scroll + bulk",
     "license" : "proprietary",
+    "type" : "library",
     "require" : {
         "elasticsearch/elasticsearch" : "~1.3",
         "monolog/monolog" : "~1.4"
