--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license" : "proprietary",
     "type" : "library",
     "require" : {
-        "elasticsearch/elasticsearch" : "~1.3",
+        "elasticsearch/elasticsearch" : "7.2.0",
         "monolog/monolog" : "~1.4"
     },
     "require-dev": {
